--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -2,14 +2,15 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.3'
 
     defaultConfig {
+        vectorDrawables.useSupportLibrary = true
         applicationId "com.arlib.floatingsearchviewdemo"
-        minSdkVersion 14
+        minSdkVersion 17
         targetSdkVersion 27
         versionCode 11
         versionName "3.0"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -23,7 +24,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(":library")
     compile files('libs/gson-2.4.jar')
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:palette-v7:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:appcompat-v7:27.1.1'
+    compile 'com.android.support:palette-v7:27.1.1'
+    compile 'com.android.support:support-v4:27.1.1'
 }
