add repositories google()

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ buildscript {
 
 allprojects {
     repositories {
+        google() // make it first element
         mavenCentral()
         jcenter()
         maven {
